Dark mode transition working. Need to fix up the button/input colors though

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -95,6 +95,11 @@ body {
   margin:0;
 }
 
+.Dark{
+  background: #2a2a2b;
+  color:white;
+}
+
 /* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
